--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,8 @@
         "lint": [
             "@php vendor/bin/pint --ansi",
             "@php vendor/bin/phpstan analyse --verbose --ansi"
-        ]
+        ],
+        "phpstan": "vendor/bin/phpstan -c phpstan.neon"
     },
     "config": {
         "sort-packages": true,
