Update .gitignore to remove php::memory as it's no longer in the project

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ _ide_helper_models.php
 /tests/code-coverage/
 /.env
 /workbench/.env
-/php::memory/
 /tests/.pest/
 /workbench/storage/logs/
+/workbench/cache/
 /phpstan.neon
