Implement pagination and query parameter handling in GitHubApi class and added config files and relevant testing
- Add private $queryParams array for storing query parameters
- Introduce paginate() method for handling GitHub API pagination
- Add withQueryParams() method to manage query parameters
- Implement buildUrl() method to construct URLs with query parameters
- Update request handling to use authentication token with when() method

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@
 STREAMLINE_APPLICATION_VERSION_INSTALLED=v0.0.0
 STREAMLINE_PROTECTED_PATHS=
 STREAMLINE_GITHUB_RELEASE_REPOSITORY=
+STREAMLINE_GITHUB_API_PAGINATION_LIMIT=
+STREAMLINE_GITHUB_AUTH_TOKEN=
 STREAMLINE_GITHUB_RELEASE_ARCHIVE_FILENAME=
 STREAMLINE_WORK_TEMP_DIR=
 STREAMLINE_BACKUP_DIR=
