Update .gitignore to modify the cache directory path for workbench

--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,5 @@ _ide_helper_models.php
 /workbench/.env
 /tests/.pest/
 /workbench/storage/logs/
-/workbench/cache/
+/workbench/bootstrap/cache/
 /phpstan.neon
