--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "php": "^8.3",
         "ext-zip": "*",
         "spatie/laravel-package-tools": "^1.16",
-        "symfony/console": "^7.2.1",
-        "symfony/process": "^7.2.0"
+        "symfony/console": "6 - 7",
+        "symfony/process": "6 - 7"
     },
     "require-dev": {
         "composer/composer": "^2.8",
