Update streamline.php configuration and .env.example for asset management
- Adjust streamline.php to include new environment variables for asset management
- Correct spacing in function definition in streamline.php
- Add STREAMLINE_WEB_ASSET_PUBLIC_DISK_NAME and STREAMLINE_WEB_ASSET_BUILD_DIR_NAME variables in .env.example

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ STREAMLINE_UPDATER_FILE_PREFIX=
 STREAMLINE_DIRECTORY_PERMISSIONS=
 STREAMLINE_FILE_PERMISSIONS=
 STREAMLINE_RETAIN_OLD_RELEASES=
+STREAMLINE_WEB_ASSET_PUBLIC_DISK_NAME=
+STREAMLINE_WEB_ASSET_BUILD_DIR_NAME=
 STREAMLINE_WEB_ASSET_FILE_TYPES=
 STREAMLINE_WEB_ASSET_HISTORY_NUM=
 STREAMLINE_WEB_ASSET_RELATIVE_DIR=
