--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,17 +16,24 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        php: [8.4, 8.3]
-        laravel: [11.*, 10.*]
-        stability: [prefer-lowest, prefer-stable]
+        os: [ubuntu-latest]
+#        os: [ubuntu-latest, windows-latest]
+        php: [8.3]
+        laravel: [11.*]
+#        php: [8.4, 8.3]
+#        laravel: [11.*, 10.*]
+        stability: [prefer-stable]
+#        stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 11.*
             testbench: 9.*
             carbon: ^2.63
-          - laravel: 10.*
-            testbench: 8.*
-            carbon: ^2.63
+#          - laravel: 10.*
+#            testbench: 8.*
+#            carbon: ^2.63
+    env:
+      extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
+      key: cache-key-v1 # Change to reset the cache
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
@@ -38,7 +45,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
+          extensions: ${{ env.extensions }}
           coverage: none
 
       - name: Setup problem matchers
