Update phpstan.yml to enable workflow_dispatch and comment out push paths

--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -1,11 +1,13 @@
 name: PHPStan
 
 on:
-  push:
-    paths:
-      - '**.php'
-      - '../../phpstan.dist.neon'
-      - '.github/workflows/phpstan.yml'
+  workflow_dispatch:
+
+#  push:
+#    paths:
+#      - '**.php'
+#      - '../../phpstan.dist.neon'
+#      - '.github/workflows/phpstan.yml'
 
 jobs:
   phpstan:
