--- a/.github/workflows/fix-php-code-style-issues.yml
+++ b/.github/workflows/fix-php-code-style-issues.yml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Fix PHP code style issues
         uses: aglipanci/laravel-pint-action@2.5
+        with:
+          preset: laravel
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
