--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,9 @@
         "symfony/process": "6 - 7"
     },
     "require-dev": {
+        "ext-zlib": "*",
         "composer/composer": "^2.8",
-        "laravel/pint": "^1.14",
+        "laravel/pint": "^1.20",
         "mikey179/vfsstream": "^1.6",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1.1||^7.10.0",
@@ -28,8 +29,7 @@
         "php-mock/php-mock-mockery": "^1.4",
         "roave/security-advisories": "dev-latest",
         "spatie/laravel-ray": "^1.35",
-        "xepozz/internal-mocker": "^1.4",
-        "ext-zlib": "*"
+        "xepozz/internal-mocker": "^1.4"
     },
     "autoload": {
         "psr-4": {
