--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
         "symfony/process": "6 - 7"
     },
     "require-dev": {
-        "ext-zlib": "*",
         "composer/composer": "^2.8",
         "laravel/pint": "^1.20",
         "mikey179/vfsstream": "^1.6",
@@ -28,8 +27,7 @@
         "pestphp/pest-plugin-laravel": "^3.0",
         "php-mock/php-mock-mockery": "^1.4",
         "roave/security-advisories": "dev-latest",
-        "spatie/laravel-ray": "^1.35",
-        "xepozz/internal-mocker": "^1.4"
+        "spatie/laravel-ray": "^1.35"
     },
     "autoload": {
         "psr-4": {
