--- a/.gitattributes
+++ b/.gitattributes
@@ -14,7 +14,10 @@
 /.gitattributes         export-ignore
 /.gitignore             export-ignore
 /.php_cs.dist.php       export-ignore
+/composer.lock          export-ignore
 /phpstan.*              export-ignore
+/phpunit.xml            export-ignore
+/phpunit.xml.*          export-ignore
 /pint.json              export-ignore
 /psalm.xml              export-ignore
 /psalm.xml.dist         export-ignore
