--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "ext-zip": "*",
         "spatie/laravel-package-tools": "^1.16",
         "symfony/console": "6 - 7",
-        "symfony/process": "6 - 7"
+        "symfony/process": "^7.2"
     },
     "require-dev": {
         "composer/composer": "^2.8",
