--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         "php": "^8.3",
         "ext-zip": "*",
         "spatie/laravel-package-tools": "^1.16",
-        "symfony/console": "6 - 7",
-        "symfony/process": "^7.2"
+        "symfony/console": "^6||^7",
+        "symfony/process": "^6.2||^7.2"
     },
     "require-dev": {
         "composer/composer": "^2.8",
