--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,7 +19,7 @@ jobs:
         os: [ubuntu-latest]
 #        os: [ubuntu-latest, windows-latest]
         php: [8.3]
-        laravel: [11.*]
+        laravel: [11.*, 10.*, 9.*]
 #        php: [8.4, 8.3]
 #        laravel: [11.*, 10.*]
         stability: [prefer-stable]
