--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "mikey179/vfsstream": "^1.6",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1.1||^7.10.0",
-        "orchestra/testbench": "^9.0.0||^8.22.0",
+        "orchestra/testbench": "^9||^8||^7",
         "pestphp/pest": "^3.5.0",
         "pestphp/pest-plugin-arch": "^3.0",
         "pestphp/pest-plugin-laravel": "^3.0",
