--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -20,20 +20,19 @@ jobs:
 #        os: [ubuntu-latest, windows-latest]
         php: [8.3]
         laravel: [11.*, 10.*, 9.*]
-#        php: [8.4, 8.3]
-#        laravel: [11.*, 10.*]
-        stability: [prefer-stable]
-#        stability: [prefer-lowest, prefer-stable]
+        stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 11.*
             testbench: 9.*
-            carbon: ^2.63
-#          - laravel: 10.*
-#            testbench: 8.*
-#            carbon: ^2.63
+            carbon: ^3.*
+          - laravel: 10.*
+            testbench: 8.*
+            carbon: ^2.*
+          - laravel: 9.*
+            testbench: 7.*
+            carbon: ^2.*
     env:
       extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
-      key: cache-key-v1 # Change to reset the cache
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
