--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
         "mikey179/vfsstream": "^1.6",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1.1||^7.10.0",
-        "orchestra/testbench": "^9||^8||^7",
-        "pestphp/pest": "^3.5.0",
+        "orchestra/testbench": "^7||^8||^9",
+        "pestphp/pest": "^1.0||^2.0||^3.5.0",
         "pestphp/pest-plugin-arch": "^3.0",
-        "pestphp/pest-plugin-laravel": "^3.0",
+        "pestphp/pest-plugin-laravel": "^1.0||^2.0||^3.0",
         "php-mock/php-mock-mockery": "^1.4",
         "roave/security-advisories": "dev-latest",
         "spatie/laravel-ray": "^1.35"
