--- a/composer.json
+++ b/composer.json
@@ -12,19 +12,19 @@
         "php": "^8.3",
         "ext-zip": "*",
         "spatie/laravel-package-tools": "^1.16",
-        "symfony/console": "^6||^7",
-        "symfony/process": "^6.2||^7.2"
+        "symfony/console": "* <8",
+        "symfony/process": "* <8"
     },
     "require-dev": {
         "composer/composer": "^2.8",
         "laravel/pint": "^1.20",
         "mikey179/vfsstream": "^1.6",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.1.1||^7.10.0",
-        "orchestra/testbench": "^7||^8||^9",
-        "pestphp/pest": "^1.0||^2.0||^3.5.0",
-        "pestphp/pest-plugin-arch": "^3.0",
-        "pestphp/pest-plugin-laravel": "^1.0||^2.0||^3.0",
+        "nunomaduro/collision": "* <9",
+        "orchestra/testbench": "* <9",
+        "pestphp/pest": "* <4",
+        "pestphp/pest-plugin-arch": "* <4",
+        "pestphp/pest-plugin-laravel": "* <4",
         "php-mock/php-mock-mockery": "^1.4",
         "roave/security-advisories": "dev-latest",
         "spatie/laravel-ray": "^1.35"
