--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "mikey179/vfsstream": "^1.6",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "* <9",
-        "orchestra/testbench": "* <10",
+        "orchestra/testbench": ">=7 <10",
         "pestphp/pest": "* <4",
         "pestphp/pest-plugin-arch": "* <4",
         "pestphp/pest-plugin-laravel": "* <4",
