--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,7 +19,7 @@ jobs:
         os: [ubuntu-latest]
 #        os: [ubuntu-latest, windows-latest]
         php: [8.3]
-        laravel: [11.*, 10.*, 9.*]
+        laravel: [11.*, 10.*]
         stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 11.*
@@ -28,9 +28,9 @@ jobs:
           - laravel: 10.*
             testbench: 8.*
             carbon: 2.*
-          - laravel: 9.*
-            testbench: 7.*
-            carbon: 2.*
+#          - laravel: 9.*
+#            testbench: 7.*
+#            carbon: 2.*
     env:
       extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
 
@@ -54,9 +54,13 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "orchestra/workbench:${{ matrix.testbench }}" "nesbot/carbon:${{ matrix.os == 'windows-latest' && '^^^' || '' }}${{ matrix.carbon }}" --no-interaction --no-update
+          composer require \
+            "laravel/framework:${{ matrix.laravel }}" \
+            "orchestra/testbench:${{ matrix.testbench }}" \
+            "orchestra/workbench:${{ matrix.testbench }}" \
+            "nesbot/carbon:${{ matrix.os == 'windows-latest' && '^^^' || '' }}${{ matrix.carbon }}" \
+            --no-interaction --no-update
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
-
       - name: List Installed Dependencies
         run: composer show -D
 
