--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,7 +19,7 @@ jobs:
         os: [ubuntu-latest]
 #        os: [ubuntu-latest, windows-latest]
         php: [8.3]
-        laravel: [11.*, 10.*]
+        laravel: [11.*]
         stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 11.*
