--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -25,9 +25,9 @@ jobs:
           - laravel: 11.*
             testbench: 9.*
             carbon: 3.*
-          - laravel: 10.*
-            testbench: 8.*
-            carbon: 2.*
+#          - laravel: 10.*
+#            testbench: 8.*
+#            carbon: 2.*
 #          - laravel: 9.*
 #            testbench: 7.*
 #            carbon: 2.*
