--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "spatie/laravel-ray": "^1.35"
     },
     "conflict": {
-        "laravel/framework": "<11.32.*"
+        "laravel/framework": "<11.32"
     },
     "autoload": {
         "psr-4": {
