--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require-dev": {
         "composer/composer": "^2.8",
+        "laravel/framework": ">=9 <12",
         "laravel/pint": "^1.20",
         "mikey179/vfsstream": "^1.6.12",
         "mockery/mockery": "^1.6",
