--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "spatie/laravel-ray": "^1.35"
     },
     "conflict": {
-        "laravel/framework": "<11.32"
+        "laravel/framework": ">11.0,<11.32"
     },
     "autoload": {
         "psr-4": {
