--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -20,7 +20,7 @@ jobs:
         os: [ubuntu-latest]
 #        os: [ubuntu-latest, windows-latest]
         php: [8.3]
-        laravel: [11.*]
+        laravel: [11.*,12.*]
         stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 11.*
