--- a/composer.json
+++ b/composer.json
@@ -20,16 +20,13 @@
         "laravel/pint": "^1.20",
         "mikey179/vfsstream": "^1.6.12",
         "mockery/mockery": "^1.6",
-        "orchestra/testbench": ">=7 <10",
+        "orchestra/testbench": ">=7",
         "pestphp/pest": "^3",
         "pestphp/pest-plugin-arch": "^3",
         "pestphp/pest-plugin-laravel": "^3",
         "php-mock/php-mock-mockery": "^1.4",
         "roave/security-advisories": "dev-latest",
         "spatie/laravel-ray": "^1.35"
-    },
-    "conflict": {
-        "laravel/framework": ">11.0,<11.32"
     },
     "autoload": {
         "psr-4": {
